# autonomous-landing-bay-rl

./: LICENSE  README.md  compose.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: auth.py  database.py  main.py  models.py
backend/app/agent/: ppo_agent.py
backend/app/rl_env/: landing_env.py
backend/app/routers/: auth.py  episodes.py  websocket.py
backend/app/utils/: password.py
backend/cli/: test_simulation.py
frontend/: .dockerignore  .env.example  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/: env.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  theme.ts
frontend/src/app/api/health/: route.ts
frontend/src/app/api/ws/: route.ts
frontend/src/app/auth/signin/: MessageAlert.tsx  page.tsx
frontend/src/app/auth/signup/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: DashboardClient.tsx  EpisodeHistory.tsx  Link.tsx  LoadingSpinner.tsx  ManualControls.tsx  QueryProvider.tsx  SimulationCanvas.tsx  StarsBackground.tsx
frontend/src/components/3d/: Rocket3D.tsx  Scene.tsx  Terrain3D.tsx  ThrusterParticles.tsx
frontend/src/components/landing/: DevModeRedirect.tsx
frontend/src/hooks/: useSimulation.ts
frontend/src/lib/actions/auth/: index.ts  logout.ts  signin.ts  signup.ts
frontend/src/lib/api/: episodes.ts  index.ts  user.ts
frontend/src/lib/catpcha/: verify.ts
frontend/src/lib/schemas/: password.ts  user.ts
frontend/src/lib/ws/: index.ts  wait-for-connected.ts
(+1 files in other folders)
